Adding debugging endpoint in which debugging logs from the Smartwatches will be uploaded
